# data-science-ualr

./: README.md  exploration.ipynb  main.py  pyproject.toml
.devcontainer/: devcontainer.json
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
src/: data_filtering.py  helpers.py  map_gen.py
templates/: iframe.html
