[tool.poetry]
name = "data-science-ualr"
version = "0.1.0"
description = ""
authors = ["brodelp <brandon@bpenny.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
folium = "^0.16.0"
geopandas = "^0.14.3"


[tool.poetry.group.dev.dependencies]
notebook = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
